# misis2025s-22-01-trufmanov-m-a

./: CMakeLists.txt
prj.cw/: CMakeLists.txt  main_cw.cpp  res.txt
prj.cw/testing/: detect_angle_new.cpp  points.json
prj.lab/: CMakeLists.txt
prj.lab/lab01/: CMakeLists.txt  generate_images.cpp  lab01_report.md  task01-01.cpp  task01-02.cpp
prj.lab/lab02/: CMakeLists.txt  lab02_report.md  statistics.csv  task02.cpp
prj.lab/lab03/: CMakeLists.txt  lab03_report.md  task03.cpp
prj.lab/lab04/: CMakeLists.txt  config.json  report.json  task04_01.cpp  task04_02.cpp  task04_03.cpp
prj.lab/lab04/collage_descriptions/: collage_gt_1.json  collage_gt_2.json  collage_gt_3.json
prj.lab/lab04/comparison_lists/: detected_list.lst  gt_list.lst
prj.lab/lab04/detections/: detected_collage_1.json  detected_collage_2.json  detected_collage_3.json
prj.lab/lab05/: CMakeLists.txt  task05.cpp  task05.hpp
prj.lab/lab06/: CMakeLists.txt  LoG_detected_list.lst  report.json  task06.cpp
prj.lab/lab06/LoG_detection/: LoG_detection_collage_1.json  LoG_detection_collage_2.json  LoG_detection_collage_3.json
prj.lab/lab07/: CMakeLists.txt  task07-01.cpp  task07-02.cpp
prj.lab/lab07/image_boundaries/: collage_1_boundaries.json  collage_2_boundaries.json  collage_3_boundaries.json  detected_boundaries_list.lst
prj.lab/lab08/: CMakeLists.txt  task08.cpp
prj.lab/lab08/color_correction_quality/: pic_quality_parameters.txt
prj.lab/semcv/: CMakeLists.txt  semcv.cpp  semcv.hpp
