cmake_minimum_required(VERSION 3.23)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(test_project)
set(OpenCV_DIR "$ENV{HOME}/vcpkg/installed/arm64-osx/share/opencv4")
set(CMAKE_PREFIX_PATH "$ENV{HOME}/vcpkg/installed/arm64-osx;$ENV{HOME}/vcpkg/installed/arm64-osx/share/opencv4")
find_package(OpenCV REQUIRED)
add_subdirectory(prj.lab)
add_subdirectory(prj.cw)